# Jacobian-estimation-tests

DynPSSimPy/: Hallvar_debug.py  build_y_lf_lines_trafos_only.py  generate_data.py  hygov_freq_vs_speed.py  pyproject.toml  sde_solver.py  set_up_case.py  test_data.ipynb  test_data.py  utils.py
DynPSSimPy/data/: .gitignore  B.csv  FD.csv
DynPSSimPy/user_lib/: __init__.py  gov.py
